# Mapping_Practice_Consensus_in_Framework-Level_Stack_Overflow_Communities

./: .env.example  pyproject.toml
data/: README.md
src/: config.py
src/authority/: README.md  __init__.py  authority.py  centrality.py  config.py  dashboard.py  db.py  graph.py  html_utils.py  pipeline.py  provider.py  proxy.py  storage.py  user_stats.py
src/breakdown/: PLAN.md  __init__.py  assemble.py  fusion.py  layout.py
src/breakdown/data/: canonical_q54069253.json  cluster_renames_q54069253.json  clusters.json  extractions.json  query_narrative.json
src/breakdown/pipeline/: __init__.py  aggregate.py  cluster.py  extract.py  llm.py  name_clusters.py  narrative.py  schemas.py
src/breakdown/pipeline/prompts/: __init__.py  aggregate.py  extract_gate.py  narrative.py
src/canonical/: README.md  __init__.py  build_index.py  embed.py  fetch.py  gate.py  groups.py  index.py  proxy.py  resolve.py  resolver.py
src/contract/: __init__.py  ports.py  types.py
src/ingest/: README.md  collect_data.py  collect_data_test.py  config.py  phase1_audit.py
src/orchestration/: PLAN.md  __init__.py  backfill_q54069253.py  driver.py  materialize.py
src/serve/: __init__.py  app.py
src/store/: __init__.py  cache.py  schema.py
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.css  app.html
web/src/lib/viz/: AnswerPanel.svelte  CommunityCard.svelte  ForceField.svelte  Narrative.svelte  QueryComposer.svelte  Waiting.svelte  markdown.ts  palette.ts
web/src/routes/: +layout.ts  +page.svelte
