[project]
name = "community-consensus-practice"
version = "0.1.0"
description = "Mapping community-consensus practice landscape in framework-level Stack Overflow communities via multi-answer structure (reactjs case study)"
requires-python = ">=3.11"
dependencies = [
    "circlify>=0.15.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-louvain>=0.16",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
